# teufa

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  app.json  compose.yml  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: build.yml  ci.yml  tests.yml
alembic/: env.py
alembic/versions/: 2fd859fa700a_oauth.py  52bdefdbf755_initial_db.py  d487ed348c4c_add_user.py
tests/: conftest.py  test_airline.py  test_app.py  test_authz.py  test_cli.py  test_flight.py  test_tenant.py
teufa/: app.py  authz.py  cli.py  dao.py  db.py  server.py
teufa/v1_api/: __init__.py  airlines.py  flights.py  tenants.py
