[tool.poetry]
name = "teufa"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Brian Rosner <brian@brosner.com>"]
readme = "README.md"
packages = [
  { include = "teufa" },
]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
gunicorn = "^22.0.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
psycopg = "^3.1.19"
alembic = "^1.13.1"

[tool.poetry.scripts]
teufa = "teufa.cli:cli"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pydeps = "^1.12.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
